--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,20 +5,9 @@
                 "*.proto.json",
                 "*.protos.json",
                 "*.prototype.json",
-                "*.prototypes.json",
+                "*.prototypes.json"
             ],
             "url": "./.vscode/prototypes.schema.json"
-        },
-    ],
-    // Specify rust_analyzer feature to avoid build.rs issues
-    "rust-analyzer.cargo.extraEnv": {
-        "RUST_ANALYZER": "1"
-    },
-    "rust-analyzer.cargo.features": [
-        "default",
-    ],
-    // Avoid reset of rust-analyzer cache when cargo clean
-    "rust-analyzer.cargo.targetDir": ".rust-analyzer/target",
-    "todo-tree.highlights.useColourScheme": true,
-    "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^[ \\t]*(-|\\d+.))\\s*($TAGS)|todo!\\((:?\".*\")?\\)"
+        }
+    ]
 }
