add registry events and improve examples

--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,10 @@ indent_size = 2
 [.git{attributes,ignore,keep}]
 insert_final_newline = false
 
+[*.icon]
+trim_trailing_whitespace = true
+insert_final_newline = false
+
 [*.text]
 end_of_line = lf
 insert_final_newline = false
