--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,23 +28,18 @@ categories = ["games", "game-development"]
 keywords = ["bevy", "proto", "data-driven", "schema", "manifest"]
 exclude = ["assets/**/*", ".github/**/*", ".vscode/**/*"]
 
-[features]
-default = ["derive"]
-derive = ["dep:bevy_histrion_proto_derive"]
-schemars = ["dep:schemars", "bevy_histrion_proto_derive/schemars"]
-
 [dependencies]
-bevy_histrion_proto_derive = { version = "0.1.0", path = "./bevy_histrion_proto_derive", optional = true }
+bevy_histrion_proto_derive = { version = "0.1.0", path = "./bevy_histrion_proto_derive" }
 
-bevy = { version = "0.16.0-rc.1", default-features = false, features = [
+bevy = { version = "0.16.0-rc.5", default-features = false, features = [
   "bevy_asset",
   "bevy_log",
 ] }
 const-fnv1a-hash = "1.1"
-schemars = { version = "0.8", optional = true }
 serde = "1.0"
 serde_json = "1.0"
-thiserror = "2.0.12"
+thiserror = "2.0"
+variadics_please = "1.1"
 
 [lints]
 workspace = true
