--- a/bevy_histrion_proto_derive/Cargo.toml
+++ b/bevy_histrion_proto_derive/Cargo.toml
@@ -10,10 +10,9 @@ proc-macro = true
 
 [features]
 default = []
-schemars = []
 
 [dependencies]
-proc-macro2-diagnostics = "0.10"
+proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
 
